# frontend/openapi.json
@@ -164,6 +164,16 @@
                 }
               }
             }
+          },
+          "409": {
+            "description": "Conflict",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorEnvelope"
+                }
+              }
+            }
           }
         }
       }
@@ -5883,6 +5893,11 @@
               }
             ],
             "title": "Email Verified At"
+          },
+          "email_verification_required": {
+            "type": "boolean",
+            "title": "Email Verification Required",
+            "default": true
           },
           "created_at": {
             "type": "string",
